Small push, few changes to main_1.3B

--- a/main_1.3B_model.ipynb
+++ b/main_1.3B_model.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -86,6 +86,9 @@
     "\n",
     "# Iterate through the streamed dataset and tokenize + embed each example\n",
     "for i, example in enumerate(tqdm(streamed_dataset)):\n",
+    "    \n",
+    "    if total_examples is not None and i >= total_examples:\n",
+    "        break\n",
     "    \n",
     "    # Tokenize the example\n",
     "    tokenized_example = tokenize_function(example)\n",
@@ -127,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -313,52 +316,7 @@
     "# Train each MLP in the ensemble\n",
     "for i, model in enumerate(ensemble):\n",
     "    print(f'Training MLP {i+1}/{ensemble_size}')\n",
-    "    train_mlp(model, train_embeddings_tensor, train_labels_tensor)\n",
-    "\n",
-    "# Function for ensemble prediction with uncertainty quantification\n",
-    "def ensemble_predict_with_uncertainty(ensemble, embeddings, batch_size=32):\n",
-    "    ensemble_predictions = []\n",
-    "    dataset_size = embeddings.shape[0]\n",
-    "    embeddings_tensor = torch.tensor(embeddings, dtype=torch.float32).to(device)\n",
-    "\n",
-    "    for i in range(0, dataset_size, batch_size):\n",
-    "        batch_embeddings = embeddings_tensor[i:i+batch_size]\n",
-    "        \n",
-    "        # Collect predictions from each model in the ensemble\n",
-    "        batch_predictions = []\n",
-    "        for model in ensemble:\n",
-    "            model.eval()\n",
-    "            with torch.no_grad():\n",
-    "                outputs = model(batch_embeddings)\n",
-    "                batch_predictions.append(outputs.cpu().numpy())\n",
-    "\n",
-    "        # Stack all predictions for the current batch and append to the ensemble predictions\n",
-    "        batch_predictions = np.stack(batch_predictions)\n",
-    "        ensemble_predictions.append(batch_predictions)\n",
-    "\n",
-    "    # Stack all batch-level predictions across all samples\n",
-    "    ensemble_predictions = np.concatenate(ensemble_predictions, axis=1)\n",
-    "\n",
-    "    # Average predictions across ensemble members\n",
-    "    averaged_predictions = np.mean(ensemble_predictions, axis=0)\n",
-    "\n",
-    "    # Calculate predictive uncertainty (variance across ensemble predictions)\n",
-    "    predictive_variance = np.var(ensemble_predictions, axis=0)\n",
-    "\n",
-    "    # Calculate predictive entropy (measures uncertainty)\n",
-    "    predictive_entropy = -np.sum(averaged_predictions * np.log(averaged_predictions + 1e-9), axis=1)\n",
-    "\n",
-    "    # Final class predictions (based on averaged predictions)\n",
-    "    final_predictions = np.argmax(averaged_predictions, axis=1)\n",
-    "\n",
-    "    return final_predictions, predictive_variance, predictive_entropy\n",
-    "\n",
-    "# Example: Get ensemble predictions on the training set\n",
-    "ensemble_predictions, predictive_variance, predictive_entropy = ensemble_predict_with_uncertainty(ensemble, embeddings)\n",
-    "\n",
-    "# Print predictive uncertainty for the first few samples\n",
-    "print(f'Predictive variance for first few samples: {predictive_variance[:5]}')\n",
-    "print(f'Predictive entropy for first few samples: {predictive_entropy[:5]}')\n"
+    "    train_mlp(model, train_embeddings_tensor, train_labels_tensor)"
    ]
   },
   {
@@ -431,6 +389,13 @@
     "\n",
     "# Print the accuracy\n",
     "print(f'Ensemble Accuracy: {accuracy * 100:.2f}%')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Distillation"
    ]
   }
  ],
