added todo list from meeting

--- a/main_1.3B_model.ipynb
+++ b/main_1.3B_model.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- plot ensemble accuracy scaling med størrelse \n",
+    "- find ud af om der er leak af data for test/validation under træning\n",
+    "- få accuracy af de enkle modeller\n",
+    "- kig på om der er noget preproccesing af datasettet\n",
+    "- start med student har samme arkitæktur som ensemble"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Embed dataset:"
    ]
   },
