Added pointers from meeting in main_1.3B_model.ipynb

--- a/main_1.3B_model.ipynb
+++ b/main_1.3B_model.ipynb
@@ -8,7 +8,8 @@
     "- find ud af om der er leak af data for test/validation under træning\n",
     "- få accuracy af de enkle modeller\n",
     "- kig på om der er noget preproccesing af datasettet\n",
-    "- start med student har samme arkitæktur som ensemble"
+    "- start med student har samme arkitæktur som ensemble\n",
+    "- Modellen overfitter da vi mangler test labels"
    ]
   },
   {
