Further explorations of parameters

--- a/baseline_1.3B_model.ipynb
+++ b/baseline_1.3B_model.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/miniconda3/envs/nlp-project/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from datasets import load_dataset\n",
@@ -31,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +115,7 @@
        ")"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,26 +180,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_logits = []\n",
-    "all_labels = []\n",
+    "import os\n",
     "\n",
-    "with torch.no_grad():\n",
-    "    for i in range(len(encoded_dataset)):\n",
-    "        batch = {\n",
-    "            \"input_ids\": encoded_dataset[i][\"input_ids\"].unsqueeze(0).to(device),\n",
-    "            \"attention_mask\": encoded_dataset[i][\"attention_mask\"].unsqueeze(0).to(device),\n",
-    "        }\n",
-    "        outputs = model(**batch)\n",
-    "        logits = outputs.logits\n",
-    "        all_logits.append(logits.cpu().numpy()[0])  # move logits back to CPU for processing\n",
-    "        all_labels.append(encoded_dataset[i][\"label\"].item())\n",
+    "logits_file = 'all_logits.npy'\n",
+    "labels_file = 'all_labels.npy'\n",
     "\n",
-    "all_logits = np.array(all_logits)\n",
-    "all_labels = np.array(all_labels)"
+    "if os.path.exists(logits_file) and os.path.exists(labels_file):\n",
+    "    all_logits = np.load(logits_file)\n",
+    "    all_labels = np.load(labels_file)\n",
+    "else:\n",
+    "    all_logits = []\n",
+    "    all_labels = []\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        for i in range(len(encoded_dataset)):\n",
+    "            batch = {\n",
+    "                \"input_ids\": encoded_dataset[i][\"input_ids\"].unsqueeze(0).to(device),\n",
+    "                \"attention_mask\": encoded_dataset[i][\"attention_mask\"].unsqueeze(0).to(device),\n",
+    "            }\n",
+    "            outputs = model(**batch)\n",
+    "            logits = outputs.logits\n",
+    "            all_logits.append(logits.cpu().numpy()[0])  # move logits back to CPU for processing\n",
+    "            all_labels.append(encoded_dataset[i][\"label\"].item())\n",
+    "    \n",
+    "    all_logits = np.array(all_logits)\n",
+    "    all_labels = np.array(all_labels)\n",
+    "    np.save(logits_file, all_logits)\n",
+    "    np.save(labels_file, all_labels)"
    ]
   },
   {
@@ -220,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -287,9 +289,9 @@
      "output_type": "stream",
      "text": [
       "Number of examples: 872\n",
-      "Accuracy: 0.5103\n",
-      "NLL: 0.7362\n",
-      "ECE: 0.1326\n"
+      "Accuracy: 0.4908\n",
+      "NLL: 0.7784\n",
+      "ECE: 0.1872\n"
      ]
     }
    ],
@@ -329,6 +331,193 @@
     "print(f\"Accuracy: {accuracy_score:.4f}\")\n",
     "print(f\"NLL: {nll_score:.4f}\")\n",
     "print(f\"ECE: {ece_score:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision: 0.0\n",
+      "Recall: 0.0\n",
+      "F1-score: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def compute_precision(pred, true):\n",
+    "    tp = np.sum((pred == 1) & (true == 1))\n",
+    "    fp = np.sum((pred == 1) & (true == 0))\n",
+    "    return tp / (tp + fp) if (tp + fp) > 0 else 0.0\n",
+    "\n",
+    "def compute_recall(pred, true):\n",
+    "    tp = np.sum((pred == 1) & (true == 1))\n",
+    "    fn = np.sum((pred == 0) & (true == 1))\n",
+    "    return tp / (tp + fn) if (tp + fn) > 0 else 0.0\n",
+    "\n",
+    "def compute_f1(precision, recall):\n",
+    "    return 2 * (precision * recall) / (precision + recall) if (precision + recall) > 0 else 0.0\n",
+    "\n",
+    "precision_score = compute_precision(pred_labels, all_labels)\n",
+    "recall_score = compute_recall(pred_labels, all_labels)\n",
+    "f1_score = compute_f1(precision_score, recall_score)\n",
+    "\n",
+    "print(f\"Precision: {precision_score}\")\n",
+    "print(f\"Recall: {recall_score}\")\n",
+    "print(f\"F1-score: {f1_score}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision: 0.0\n",
+      "Recall: 0.0\n",
+      "F1 Score: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def precision_recall_f1(y_true, y_pred, positive_label=1):\n",
+    "    \"\"\"\n",
+    "    Calculate precision, recall, and F1 score for binary classification.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - y_true: list or array of true labels.\n",
+    "    - y_pred: list or array of predicted labels.\n",
+    "    - positive_label: the value in the labels that is considered the positive class (default is 1).\n",
+    "\n",
+    "    Returns:\n",
+    "    - precision: float, precision score.\n",
+    "    - recall: float, recall score.\n",
+    "    - f1_score: float, F1 score.\n",
+    "    \"\"\"\n",
+    "    # Initialize counts for True Positives, False Positives, and False Negatives.\n",
+    "    TP = FP = FN = 0\n",
+    "\n",
+    "    # Loop over true and predicted labels simultaneously to compute TP, FP, and FN.\n",
+    "    for true, pred in zip(y_true, y_pred):\n",
+    "        if pred == positive_label:\n",
+    "            if true == positive_label:\n",
+    "                TP += 1  # Correctly predicted positive.\n",
+    "            else:\n",
+    "                FP += 1  # Incorrectly predicted positive.\n",
+    "        else:\n",
+    "            if true == positive_label:\n",
+    "                FN += 1  # Positive instance missed by prediction.\n",
+    "\n",
+    "    # Calculate precision, ensuring we do not divide by zero.\n",
+    "    if TP + FP > 0:\n",
+    "        precision = TP / (TP + FP)\n",
+    "    else:\n",
+    "        precision = 0.0\n",
+    "\n",
+    "    # Calculate recall, ensuring we do not divide by zero.\n",
+    "    if TP + FN > 0:\n",
+    "        recall = TP / (TP + FN)\n",
+    "    else:\n",
+    "        recall = 0.0\n",
+    "\n",
+    "    # Calculate F1 score if both precision and recall are non-zero.\n",
+    "    if precision + recall > 0:\n",
+    "        f1_score = 2 * (precision * recall) / (precision + recall)\n",
+    "    else:\n",
+    "        f1_score = 0.0\n",
+    "\n",
+    "    return precision, recall, f1_score\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "precision, recall, f1 = precision_recall_f1(all_labels, pred_labels)\n",
+    "\n",
+    "print(\"Precision:\", precision)\n",
+    "print(\"Recall:\", recall)\n",
+    "print(\"F1 Score:\", f1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 0 1 1 0 1 0 0 1 0 1 0 0 1 0 1 1 1 0 0 0 0 0 1 1 0 0 1 0 0 1 0 1 0 0 0 1\n",
+      " 0 1 1 1 1 1 1 0 0 0 1 1 0 0 1 1 1 0 1 0 0 0 0 1 0 1 1 0 0 1 1 1 0 0 1 1 1\n",
+      " 0 1 0 1 1 0 1 0 0 1 1 1 0 1 1 1 1 1 0 1 1 0 0 1 0 0 1 0 1 1 1 0 1 0 0 1 0\n",
+      " 0 1 0 1 0 1 1 0 0 1 0 1 1 1 1 0 0 1 1 0 0 1 0 0 0 0 0 1 0 0 0 1 1 0 0 1 0\n",
+      " 0 1 1 1 1 0 1 0 1 0 0 1 0 0 0 0 1 0 0 0 1 1 1 0 1 0 1 1 0 0 0 1 0 0 0 0 0\n",
+      " 1 1 1 0 0 0 1 1 1 1 1 1 0 1 0 1 1 0 0 1 1 1 1 0 0 1 0 0 0 0 1 1 0 0 1 1 0\n",
+      " 1 1 1 1 0 1 1 0 1 1 0 0 1 1 1 0 0 1 1 0 0 1 1 1 1 0 1 1 1 0 1 0 0 0 0 0 0\n",
+      " 1 0 1 0 1 0 0 1 0 0 0 1 1 0 1 0 1 1 1 0 1 1 0 1 1 0 0 1 1 1 1 1 0 0 1 1 1\n",
+      " 0 1 0 1 1 0 1 1 1 0 1 1 1 1 1 1 0 1 1 0 1 1 0 0 1 0 0 1 1 1 1 1 0 0 0 1 1\n",
+      " 1 1 0 1 0 0 1 0 1 0 0 1 1 0 0 0 0 0 1 1 1 1 0 0 0 1 1 1 0 1 0 0 0 1 1 0 1\n",
+      " 0 1 1 0 0 1 0 0 0 0 0 1 0 1 0 0 1 1 0 1 0 0 0 1 1 0 1 1 1 0 1 1 0 0 1 0 1\n",
+      " 0 0 0 1 0 0 0 1 1 1 1 1 0 0 1 1 0 1 1 1 1 1 0 1 0 0 1 0 1 0 1 1 1 1 0 0 1\n",
+      " 0 1 0 1 1 0 1 1 0 1 0 1 0 1 1 1 1 0 0 0 1 0 1 1 1 0 1 0 1 1 0 1 0 0 0 1 1\n",
+      " 1 1 1 1 1 0 0 1 0 0 0 1 0 0 1 1 0 1 1 0 1 0 0 1 1 1 1 1 1 1 1 0 0 1 0 0 1\n",
+      " 1 0 1 0 0 1 1 1 0 0 1 0 1 0 1 1 1 1 0 1 0 0 1 1 0 0 0 0 1 0 0 0 0 0 0 1 0\n",
+      " 0 0 1 1 0 0 1 0 1 0 1 0 1 0 1 1 0 0 1 0 0 0 1 0 0 0 0 0 0 0 0 0 0 1 1 0 0\n",
+      " 0 1 1 0 0 0 0 0 0 0 1 1 0 1 0 1 1 1 0 1 0 1 1 0 1 0 0 0 0 1 1 1 1 1 1 0 1\n",
+      " 0 1 0 0 1 1 0 1 0 1 0 1 1 0 1 1 0 0 0 1 0 0 0 0 0 0 1 1 0 1 0 1 0 0 1 1 1\n",
+      " 1 1 0 1 0 1 0 1 1 1 0 1 1 1 1 0 0 1 1 1 1 0 0 0 0 1 0 0 0 0 1 1 1 1 0 0 0\n",
+      " 0 0 0 0 0 1 0 0 0 0 0 1 0 0 1 1 0 1 1 0 1 0 1 1 0 1 1 0 0 0 0 0 0 0 1 1 1\n",
+      " 1 1 1 0 1 0 1 1 0 1 0 0 0 1 1 1 0 0 1 0 1 0 1 1 0 0 1 1 1 1 0 0 1 1 0 0 0\n",
+      " 1 1 0 1 0 1 1 1 1 0 0 1 0 0 0 1 1 1 0 1 0 0 1 0 0 0 1 0 0 1 1 1 1 1 0 1 0\n",
+      " 0 1 1 1 0 0 1 1 0 1 0 1 1 0 0 0 1 1 0 0 1 1 0 1 0 0 0 1 0 0 0 0 0 1 1 1 1\n",
+      " 0 0 1 0 1 1 1 1 1 1 1 0 0 0 1 1 0 1 0 0 1]\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None, None)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(all_labels),print(pred_labels)"
    ]
   }
  ],
