simplified the code further

--- a/main_1.3B_model-mps copy.ipynb
+++ b/main_1.3B_model-mps copy.ipynb
@@ -88,106 +88,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Paths to save/load embeddings and labels\n",
-    "# train_embeddings_file = 'train_embeddings.npy'\n",
-    "# train_labels_file = 'train_labels.npy'\n",
-    "# validation_embeddings_file = 'validation_embeddings.npy'\n",
-    "# validation_labels_file = 'validation_labels.npy'\n",
-    "# test_embeddings_file = 'test_embeddings.npy'\n",
-    "# test_labels_file = 'test_labels.npy'\n",
-    "\n",
-    "# # Check if embeddings and labels are already saved\n",
-    "# if (os.path.exists(train_embeddings_file) and os.path.exists(train_labels_file) and\n",
-    "#     os.path.exists(validation_embeddings_file) and os.path.exists(validation_labels_file) and\n",
-    "#     os.path.exists(test_embeddings_file) and os.path.exists(test_labels_file)):\n",
-    "#     # Load embeddings and labels\n",
-    "#     train_embeddings = np.load(train_embeddings_file)\n",
-    "#     train_labels = np.load(train_labels_file)\n",
-    "#     validation_embeddings = np.load(validation_embeddings_file)\n",
-    "#     validation_labels = np.load(validation_labels_file)\n",
-    "#     test_embeddings = np.load(test_embeddings_file)\n",
-    "#     test_labels = np.load(test_labels_file)\n",
-    "#     print(\"Loaded train, validation, and test embeddings and labels from disk.\")\n",
-    "# else:\n",
-    "#     # Load model directly\n",
-    "#     tokenizer = AutoTokenizer.from_pretrained(\"HuggingFaceTB/SmolLM-1.7B-Instruct\")\n",
-    "#     model = AutoModelForCausalLM.from_pretrained(\"HuggingFaceTB/SmolLM-1.7B-Instruct\")\n",
-    "\n",
-    "#     # Move the model to GPU\n",
-    "#     model = model.to(device)\n",
-    "\n",
-    "#     # Load the SST-2 dataset from the GLUE benchmark with streaming\n",
-    "#     dataset = load_dataset('glue', 'sst2', streaming=True)\n",
-    "\n",
-    "#     # Initialize lists to store embeddings and labels for each set\n",
-    "#     train_embeddings_list = []\n",
-    "#     train_labels_list = []\n",
-    "#     validation_embeddings_list = []\n",
-    "#     validation_labels_list = []\n",
-    "#     test_embeddings_list = []\n",
-    "#     test_labels_list = []\n",
-    "\n",
-    "#     # Function to extract embeddings\n",
-    "#     def extract_embeddings(streamed_dataset, embeddings_list, labels_list):\n",
-    "#         for example in tqdm(streamed_dataset):\n",
-    "#             inputs = tokenizer(\n",
-    "#                 example['sentence'],\n",
-    "#                 return_tensors='pt',\n",
-    "#                 padding=True,\n",
-    "#                 truncation=True,\n",
-    "#                 max_length=128\n",
-    "#             ).to(device)\n",
-    "#             with torch.no_grad():\n",
-    "#                 outputs = model(**inputs, output_hidden_states=True)\n",
-    "#             hidden_states = outputs.hidden_states[-1]  # last layer hidden states\n",
-    "#             embeddings = hidden_states.mean(dim=1).cpu().numpy()  # average over sequence length\n",
-    "#             embeddings_list.append(embeddings.squeeze())  # shape (hidden_size,)\n",
-    "#             labels_list.append(example['label'])\n",
-    "\n",
-    "#     # Extract embeddings for train, validation, and test sets\n",
-    "#     extract_embeddings(dataset['train'], train_embeddings_list, train_labels_list)\n",
-    "#     extract_embeddings(dataset['validation'], validation_embeddings_list, validation_labels_list)\n",
-    "#     extract_embeddings(dataset['test'], test_embeddings_list, test_labels_list)\n",
-    "\n",
-    "#     # Convert lists to numpy arrays\n",
-    "#     train_embeddings = np.vstack(train_embeddings_list)\n",
-    "#     train_labels = np.array(train_labels_list)\n",
-    "#     validation_embeddings = np.vstack(validation_embeddings_list)\n",
-    "#     validation_labels = np.array(validation_labels_list)\n",
-    "#     test_embeddings = np.vstack(test_embeddings_list)\n",
-    "#     test_labels = np.array(test_labels_list)\n",
-    "\n",
-    "#     # Standardize the embeddings\n",
-    "#     scaler = StandardScaler()\n",
-    "#     train_embeddings = scaler.fit_transform(train_embeddings)\n",
-    "#     validation_embeddings = scaler.transform(validation_embeddings)\n",
-    "#     test_embeddings = scaler.transform(test_embeddings)\n",
-    "\n",
-    "#     # Save embeddings, labels, and scaler to disk\n",
-    "#     np.save(train_embeddings_file, train_embeddings)\n",
-    "#     np.save(train_labels_file, train_labels)\n",
-    "#     np.save(validation_embeddings_file, validation_embeddings)\n",
-    "#     np.save(validation_labels_file, validation_labels)\n",
-    "#     np.save(test_embeddings_file, test_embeddings)\n",
-    "#     np.save(test_labels_file, test_labels)\n",
-    "\n",
-    "#     print(\"Saved train, validation, and test embeddings and labels to disk.\")\n",
-    "\n",
-    "# # Print shapes of embeddings and labels\n",
-    "# print(f\"Train embeddings shape: {train_embeddings.shape}\")\n",
-    "# print(f\"Train labels shape: {train_labels.shape}\")\n",
-    "# print(f\"Validation embeddings shape: {validation_embeddings.shape}\")\n",
-    "# print(f\"Validation labels shape: {validation_labels.shape}\")\n",
-    "# print(f\"Test embeddings shape: {test_embeddings.shape}\")\n",
-    "# print(f\"Test labels shape: {test_labels.shape}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -209,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -255,34 +155,34 @@
      "output_type": "stream",
      "text": [
       "Training MLP 1/10\n",
-      "Validation -- Model 1: Accuracy = 0.8693, NLL = 0.3840, ECE = 0.0592, F1 = 0.8769\n",
+      "Validation -- Model 1: Accuracy = 0.8693, NLL = 0.3840, ECE = 0.0592, F1 = 0.8689\n",
       "Validation -- Ensemble Size 1: Accuracy: 0.8693, NLL: 0.3840, ECE: 0.0592, F1 Score: 0.8689\n",
       "Training MLP 2/10\n",
-      "Validation -- Model 2: Accuracy = 0.8635, NLL = 0.3674, ECE = 0.0645, F1 = 0.8673\n",
+      "Validation -- Model 2: Accuracy = 0.8635, NLL = 0.3674, ECE = 0.0645, F1 = 0.8635\n",
       "Validation -- Ensemble Size 2: Accuracy: 0.8739, NLL: 0.3615, ECE: 0.0556, F1 Score: 0.8738\n",
       "Training MLP 3/10\n",
-      "Validation -- Model 3: Accuracy = 0.8589, NLL = 0.3756, ECE = 0.0713, F1 = 0.8644\n",
+      "Validation -- Model 3: Accuracy = 0.8589, NLL = 0.3756, ECE = 0.0713, F1 = 0.8588\n",
       "Validation -- Ensemble Size 3: Accuracy: 0.8681, NLL: 0.3570, ECE: 0.0542, F1 Score: 0.8680\n",
       "Training MLP 4/10\n",
-      "Validation -- Model 4: Accuracy = 0.8601, NLL = 0.3882, ECE = 0.0650, F1 = 0.8656\n",
+      "Validation -- Model 4: Accuracy = 0.8601, NLL = 0.3882, ECE = 0.0650, F1 = 0.8600\n",
       "Validation -- Ensemble Size 4: Accuracy: 0.8681, NLL: 0.3584, ECE: 0.0535, F1 Score: 0.8680\n",
       "Training MLP 5/10\n",
-      "Validation -- Model 5: Accuracy = 0.8693, NLL = 0.3649, ECE = 0.0628, F1 = 0.8716\n",
+      "Validation -- Model 5: Accuracy = 0.8693, NLL = 0.3649, ECE = 0.0628, F1 = 0.8693\n",
       "Validation -- Ensemble Size 5: Accuracy: 0.8681, NLL: 0.3515, ECE: 0.0531, F1 Score: 0.8680\n",
       "Training MLP 6/10\n",
-      "Validation -- Model 6: Accuracy = 0.8739, NLL = 0.3572, ECE = 0.0588, F1 = 0.8744\n",
+      "Validation -- Model 6: Accuracy = 0.8739, NLL = 0.3572, ECE = 0.0588, F1 = 0.8739\n",
       "Validation -- Ensemble Size 6: Accuracy: 0.8658, NLL: 0.3480, ECE: 0.0578, F1 Score: 0.8658\n",
       "Training MLP 7/10\n",
-      "Validation -- Model 7: Accuracy = 0.8567, NLL = 0.3814, ECE = 0.0705, F1 = 0.8631\n",
+      "Validation -- Model 7: Accuracy = 0.8567, NLL = 0.3814, ECE = 0.0705, F1 = 0.8565\n",
       "Validation -- Ensemble Size 7: Accuracy: 0.8658, NLL: 0.3493, ECE: 0.0549, F1 Score: 0.8658\n",
       "Training MLP 8/10\n",
-      "Validation -- Model 8: Accuracy = 0.8578, NLL = 0.3740, ECE = 0.0675, F1 = 0.8655\n",
+      "Validation -- Model 8: Accuracy = 0.8578, NLL = 0.3740, ECE = 0.0675, F1 = 0.8575\n",
       "Validation -- Ensemble Size 8: Accuracy: 0.8658, NLL: 0.3483, ECE: 0.0542, F1 Score: 0.8657\n",
       "Training MLP 9/10\n",
-      "Validation -- Model 9: Accuracy = 0.8658, NLL = 0.3764, ECE = 0.0664, F1 = 0.8732\n",
+      "Validation -- Model 9: Accuracy = 0.8658, NLL = 0.3764, ECE = 0.0664, F1 = 0.8655\n",
       "Validation -- Ensemble Size 9: Accuracy: 0.8658, NLL: 0.3478, ECE: 0.0535, F1 Score: 0.8657\n",
       "Training MLP 10/10\n",
-      "Validation -- Model 10: Accuracy = 0.8670, NLL = 0.3645, ECE = 0.0570, F1 = 0.8708\n",
+      "Validation -- Model 10: Accuracy = 0.8670, NLL = 0.3645, ECE = 0.0570, F1 = 0.8669\n",
       "Validation -- Ensemble Size 10: Accuracy: 0.8704, NLL: 0.3473, ECE: 0.0556, F1 Score: 0.8703\n"
      ]
     },
@@ -385,12 +285,8 @@
     "        preds = np.argmax(probs, axis=1)\n",
     "        \n",
     "        single_probs = probs\n",
-    "        \n",
     "        # Compute individual model metrics\n",
-    "        acc = accuracy_score(val_y.numpy(), preds)\n",
-    "        nll = log_loss(val_y.numpy(), probs)\n",
-    "        ece = compute_ece(probs, val_y.numpy())\n",
-    "        f1 = f1_score(val_y.numpy(),preds)\n",
+    "        acc, nll, ece, f1 = eval_metrics(val_y.numpy(), preds, probs, average='weighted')\n",
     "        \n",
     "        print(f\"Validation -- Model {n}: Accuracy = {acc:.4f}, NLL = {nll:.4f}, ECE = {ece:.4f}, F1 = {f1:.4f}\")\n",
     "    \n",
@@ -412,11 +308,7 @@
     "        ensemble_probs = np.mean(ensemble_outputs, axis=0)\n",
     "        ensemble_preds = np.argmax(ensemble_probs, axis=1)\n",
     "        \n",
-    "        # Compute metrics\n",
-    "        acc = accuracy_score(val_y.numpy(), ensemble_preds)\n",
-    "        nll = log_loss(val_y.numpy(), ensemble_probs)\n",
-    "        ece = compute_ece(ensemble_probs, val_y.numpy())\n",
-    "        f1 = f1_score(val_y.numpy(), ensemble_preds, average='weighted')  # Using weighted averaging\n",
+    "        acc, nll, ece, f1 = eval_metrics(val_y.numpy(), ensemble_preds, ensemble_probs, average='weighted')\n",
     "        \n",
     "        # Store metrics\n",
     "        ensemble_sizes.append(n)\n",
@@ -483,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1209,10 +1101,7 @@
     "            val_preds = np.argmax(val_probs, axis=1)\n",
     "            \n",
     "            # Calculate Accuracy, NLL, ECE, and F1 score on validation data\n",
-    "            acc = accuracy_score(val_y.numpy(), val_preds)\n",
-    "            nll = log_loss(val_y.numpy(), val_probs)\n",
-    "            ece = compute_ece(val_probs, val_y.numpy())\n",
-    "            f1 = f1_score(val_y.numpy(), val_preds, average='weighted')  # Using weighted averaging\n",
+    "            acc, nll, ece, f1 = eval_metrics(val_y.numpy(), val_preds, val_probs, average='weighted')\n",
     "            \n",
     "            acc_list.append(acc)\n",
     "            nll_list.append(nll)\n",
@@ -1321,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
