added a todo list

--- a/main_1.3B_model-mps copy.ipynb
+++ b/main_1.3B_model-mps copy.ipynb
@@ -14,6 +14,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- Try with the imdb dataet (DONE)\n",
+    "- Split the train set fo sst to test and train sets (DONE)\n",
+    "- Incorperate early stopping during training\n",
+    "- Simplify the loss function for distillation so there is less parameters\n",
+    "- Make a combinded ECE Plot\n",
+    "- Test on the the training set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Embed dataset:"
    ]
   },
