Further simplified and incorperated obs as needed

--- a/main_1.3B_model-mps copy.ipynb
+++ b/main_1.3B_model-mps copy.ipynb
@@ -1277,23 +1277,11 @@
     "# Paths to save/load embeddings and labels\n",
     "imdb_train_embeddings_file = 'imdb_train_embeddings.npy'\n",
     "imdb_train_labels_file = 'imdb_train_labels.npy'\n",
-    "# imdb_test_embeddings_file = 'imdb_test_embeddings.npy'\n",
-    "# imdb_test_labels_file = 'imdb_test_labels.npy'\n",
-    "# imdb_unsupervised_embeddings_file = 'imdb_unsupervised_embeddings.npy'\n",
-    "# imdb_unsupervised_labels_file = 'imdb_unsupervised_labels.npy'\n",
     "\n",
     "# Check if embeddings and labels are already saved\n",
     "if (os.path.exists(imdb_train_embeddings_file) and os.path.exists(imdb_train_labels_file)):\n",
-    "    # and\n",
-    "    # os.path.exists(imdb_test_embeddings_file) and os.path.exists(imdb_test_labels_file) and\n",
-    "    # os.path.exists(imdb_unsupervised_embeddings_file) and os.path.exists(imdb_unsupervised_labels_file)\n",
-    "    # Load embeddings and labels\n",
     "    imdb_train_embeddings = np.load(imdb_train_embeddings_file)\n",
     "    imdb_train_labels = np.load(imdb_train_labels_file)\n",
-    "    # imdb_test_embeddings = np.load(imdb_test_embeddings_file)\n",
-    "    # imdb_test_labels = np.load(imdb_test_labels_file)\n",
-    "    # imdb_unsupervised_embeddings = np.load(imdb_unsupervised_embeddings_file)\n",
-    "    # imdb_unsupervised_labels = np.load(imdb_unsupervised_labels_file)\n",
     "    print(\"Loaded train, validation, and test embeddings and labels from disk.\")\n",
     "else:\n",
     "    # Load model directly\n",
@@ -1334,40 +1322,33 @@
     "\n",
     "    # Extract embeddings for train, validation, and test sets\n",
     "    extract_embeddings(dataset, imdb_train_embeddings_list, imdb_train_labels_list)\n",
-    "    # extract_embeddings(dataset['test'], imdb_test_embeddings_list, imdb_test_labels_list)\n",
-    "    # extract_embeddings(dataset['unsupervised'], imdb_unsupervised_embeddings_list, imdb_unsupervised_labels_list)\n",
     "\n",
     "    # Convert lists to numpy arrays\n",
     "    imdb_train_embeddings = np.vstack(imdb_train_embeddings_list)\n",
     "    imdb_train_labels = np.array(imdb_train_labels_list)\n",
-    "    # imdb_test_embeddings = np.vstack(imdb_test_embeddings_list)\n",
-    "    # imdb_test_labels = np.array(imdb_test_labels_list)\n",
-    "    # imdb_unsupervised_embeddings = np.vstack(imdb_unsupervised_embeddings_list)\n",
-    "    # imdb_unsupervised_labels = np.array(imdb_unsupervised_labels_list)\n",
     "\n",
     "    # Standardize the embeddings\n",
     "    scaler = StandardScaler()\n",
     "    imdb_train_embeddings = scaler.fit_transform(imdb_train_embeddings)\n",
-    "    # imdb_test_embeddings = scaler.transform(imdb_test_embeddings)\n",
-    "    # imdb_unsupervised_embeddings = scaler.transform(imdb_unsupervised_embeddings)\n",
     "\n",
     "    # Save embeddings, labels, and scaler to disk\n",
     "    np.save(imdb_train_embeddings_file, imdb_train_embeddings)\n",
     "    np.save(imdb_train_labels_file, imdb_train_labels)\n",
-    "    # np.save(imdb_test_embeddings_file, imdb_test_embeddings)\n",
-    "    # np.save(imdb_test_labels_file, imdb_test_labels)\n",
-    "    # np.save(imdb_unsupervised_embeddings_file, imdb_unsupervised_embeddings)\n",
-    "    # np.save(imdb_unsupervised_labels_file, imdb_unsupervised_labels)\n",
     "\n",
     "    print(\"Saved train, test, and unsupervised embeddings and labels to disk.\")\n",
     "\n",
     "# Print shapes of embeddings and labels\n",
     "print(f\"IMDB Train embeddings shape: {imdb_train_embeddings.shape}\")\n",
-    "print(f\"IMDB Train labels shape: {imdb_train_labels.shape}\")\n",
-    "# print(f\"IMDB Test embeddings shape: {imdb_test_embeddings.shape}\")\n",
-    "# print(f\"IMDB Test labels shape: {imdb_test_labels.shape}\")\n",
-    "# print(f\"IMDB Unsupervised embeddings shape: {imdb_unsupervised_embeddings.shape}\")\n",
-    "# print(f\"IMDB Unsupervised labels shape: {imdb_unsupervised_labels.shape}\")"
+    "print(f\"IMDB Train labels shape: {imdb_train_labels.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imdb_train_embeddings, imdb_train_labels, imdb_test_embeddings, imdb_test_labels, imdb_unsupervised_embeddings, imdb_unsupervised_labels = imdb_process_embeddings_and_labels()"
    ]
   },
   {
